Fix warnings/failures with messages that are cancelled from got-headers

https://bugzilla.gnome.org/show_bug.cgi?id=674747